fixing wrapping issue with hero button

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -113,7 +113,7 @@ $hero-color: #138ee0;
 
 .hero-btn {
     position: relative;
-    vertical-align: middle;
+    // vertical-align: middle;
     font-size: 2.2rem;
     line-height: 0;
     width: 22rem;
@@ -156,6 +156,7 @@ $hero-color: #138ee0;
         display: flex;
         align-items: center;
         justify-content: center;
+        text-wrap: nowrap;
         gap: 0.5em;
     }
 }
